; ModuleID = '/home/carl/AnghaBench/reactos/dll/3rdparty/libtirpc/src/extr_wintirpc.c_winsock_init.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/3rdparty/libtirpc/src/extr_wintirpc.c_winsock_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WSAData = common dso_local global i32 0, align 4
@init = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [20 x i32] [i32 87, i32 83, i32 65, i32 83, i32 116, i32 97, i32 114, i32 116, i32 117, i32 112, i32 32, i32 102, i32 97, i32 105, i32 108, i32 101, i32 100, i32 33, i32 10, i32 0], align 4
@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @winsock_init() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 @MAKEWORD(i32 3, i32 3)
  %4 = call i32 @WSAStartup(i32 %3, i32* @WSAData)
  store i32 %4, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %0
  store i64 0, i64* @init, align 8
  %8 = call i32 @tirpc_report(i8* bitcast ([20 x i32]* @.str to i8*))
  %9 = call i32 (...) @WSACleanup()
  %10 = load i32, i32* @FALSE, align 4
  store i32 %10, i32* %1, align 4
  br label %13

11:                                               ; preds = %0
  %12 = load i32, i32* @TRUE, align 4
  store i32 %12, i32* %1, align 4
  br label %13

13:                                               ; preds = %11, %7
  %14 = load i32, i32* %1, align 4
  ret i32 %14
}

declare dso_local i32 @WSAStartup(i32, i32*) #1

declare dso_local i32 @MAKEWORD(i32, i32) #1

declare dso_local i32 @tirpc_report(i8*) #1

declare dso_local i32 @WSACleanup(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
